--- a/style.css
+++ b/style.css
@@ -158,9 +158,6 @@ body {
   color: var(--color-danger);
   transition: opacity 0.2s;
 }
-button > svg {
-  pointer-events: none;
-}
 .todo__delete:hover {
   opacity: 0.7;
 }
@@ -169,4 +166,9 @@ button > svg {
 .todo__item--done .todo__text {
   text-decoration: line-through;
   opacity: 0.6;
+}
+
+/*! mohem */
+button > svg {
+  pointer-events: none;
 }
